# ctrlpluspen

./: DATA_GUIDE.md  IMPROVEMENTS.md  README.md  main.ipynb  package.json  pyproject.toml  requirements.txt  training_output.txt
configs/: data.yaml  quick_test.yaml  rtx3050.yaml
diagrams/: activity_diagram.puml  class_diagram.puml  object_diagram.puml
docss/: Bhadra Dilip Gada Synopsis.docx  Bhadra Gada Black Book Sem 6.docx  Bhadra Gada Black Book Sem 6.md  CONCEPTUAL_DIAGRAMS.md  Implmenatation.docx  Module 3 Requirement and Analysis.docx  Module Docs.docx  Module_2_Survey_of_Technologies.docx  Module_2_Survey_of_Technologies.md  ~$adra Dilip Gada Synopsis.docx
frontend/: .env.example  .gitignore  package-lock.json  package.json
handwriting_ocr/: .env.example  .gitignore  00_START_HERE.md  01_PROJECT_OVERVIEW.md  02_TRAINING_GUIDE.md  04_AWS_DEPLOYMENT.md  BUILD_SUMMARY.md  Dockerfile  Dockerfile.cpu  README.md  TESTING_GUIDE.md  config_production.yaml  docker-compose.yml  quick_test.py  requirements.txt
outputs/: test_prediction
ref/: ENABLE_GPU.md  SYNTHETIC_DATA_GUIDE.md  demo_lined_paper.py  demo_realistic_paper.py  generate_all_variations.py  generate_lined_paper.py  generate_realistic.py  generate_training_data.py  rnn_ops.py  synthesize_training_data.py  test_quick.py  tf_base_model.py  train_model.py  training_output.txt  try.py  verify_synthetic_data.py
ref1/: README.md  environment.win.yml  requirements-win.txt
ref2/: .gitignore  generate_all_variations.py
scripts/: __init__.py  check_environment.py  convert_emnist.py  convert_to_yolo.py  download_datasets.py  download_real_datasets.py  evaluate.py  paddleocr_predict.py  postprocess.py  predict.py  prepare_iam_dataset.py  quick_test.py  run_inference.py  run_ocr.py  train_detector.py  validate_dataset.py  visualize.py
synthesis_api/: main.py  requirements.txt
(+60 files in other folders)
